Adopted for other countries other than Norway

--- a/config/default.cfg
+++ b/config/default.cfg
@@ -8,5 +8,46 @@ tomorrow_pub = nordpool/price/tomorrow/{value}
 [Nordpool]
 # format: /path/to/nordpool-mqtt/cache
 cache_dir = FIXME
-# Possible values: Oslo, Kr.sand, Bergen, Tr.heim, Molde, Tromsø
+
+# "SYS": 17,
+#    "NO": 23,
+#    "SE": 29,
+#    "DK": 41,
+#    # "FI": 35,
+#    # "EE": 47,
+#    # "LT": 53,
+#    # "LV": 59,
+#    # "AT": 298578,
+#    # "BE": 298736,
+#    # "DE-LU": 299565,
+#    # "FR": 299568,
+#    # "NL": 299571,
+#    # "PL": 391921,
+country_base_page = FIXME
+
+# Possible values
+# ---------------
+# "DK1": "Europe/Copenhagen",
+# "DK2": "Europe/Copenhagen",
+# "FI": "Europe/Helsinki",
+# "EE": "Europe/Tallinn",
+# "LT": "Europe/Vilnius",
+# "LV": "Europe/Riga",
+# "Oslo": "Europe/Oslo",
+# "Kr.sand": "Europe/Oslo",
+# "Bergen": "Europe/Oslo",
+# "Molde": "Europe/Oslo",
+# "Tr.heim": "Europe/Oslo",
+# "Tromsø": "Europe/Oslo",
+# "SE1": "Europe/Stockholm",
+# "SE2": "Europe/Stockholm",
+# "SE3": "Europe/Stockholm",
+# "SE4": "Europe/Stockholm",
+# # What zone is this?
+# "SYS": "Europe/Stockholm",
+# "FR": "Europe/Paris",
+# "NL": "Europe/Amsterdam",
+# "BE": "Europe/Brussels",
+# "AT": "Europe/Vienna",
+# "DE-LU": "Europe/Berlin",
 city = FIXME
